--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -30,8 +30,8 @@
 					</div>
 					<div class="card-category">
 						<center>
-							Jl. Desa Rowobelang, Kec. Batang, Kab. Batang, 51216<br>
-							Email : smaduabatang@ymail.com / Telp. 081222333444
+							Jl. Desa Rowobelang, Kec. Batang, Kab. Batang, 51222<br>
+							Email : smaduabatang@ymail.com | Telp. 0285 &ndash; 4494259
 						</center>
 					</div>		
 				</div>
