--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -124,7 +124,7 @@
 									</div>
 								</div>
 						</li>
-						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
+						<!-- <li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
 							<div class="activity-item " data-activityname="Pakta Integritas">
 								<div class="activity-instance ">
 									<div class="activitytitle media modtype_forum position-relative align-self-start">
@@ -148,7 +148,7 @@
 										Para peserta diwajibkan untuk mengisi Pakta Integritas mengikuti OSN ASTRONOMI.
 									</div>
 								</div>
-						</li>
+						</li> -->
 						<li class="list-group-item">
 							<div class="activity-item " data-activityname="Download DATA dan KONSTANTA">
 								<div class="activity-basis d-flex align-items-center">
