--- a/peserta/index.html
+++ b/peserta/index.html
@@ -205,7 +205,14 @@
 								</ul>
 							</div>
 						</li>
-							<li class="nav-item">
+						<li class="nav-item">
+							<a href="javascript:halaman('info');">
+								<i class="fas fa-info-circle"></i>
+								<p>Informasi</p>
+							</a>
+						
+						</li>
+							<!-- <li class="nav-item">
 							<a data-toggle="collapse" href="#rekapAbsen">
 								<i class="fas fa-clipboard-list"></i>
 								<p>Rekap Absen</p>
@@ -225,7 +232,7 @@
 								<?php } ?>
 								</ul>
 							</div>
-						</li>
+						</li> -->
 						<li class="nav-item active mt-3">
 							<a href="logout.php" class="collapsed">
 								<i class="fas fa-arrow-alt-circle-left"></i>
