--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -57,11 +57,17 @@
 							</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" id="pills-info-tab-icon" data-toggle="pill" href="#pills-info-icon" role="tab" aria-controls="pills-info-icon" aria-selected="false">
+								<i class="fa fa-info-circle"></i>
+									Info
+							</a>
+						</li>
+						<!-- <li class="nav-item">
 							<a class="nav-link" id="pills-contact-tab-icon" data-toggle="pill" href="#pills-contact-icon" role="tab" aria-controls="pills-contact-icon" aria-selected="false">
 								<i class="fas fa-user-astronaut"></i>
 									Tentang
 							</a>
-						</li>
+						</li> -->
 					</ul>
 					<div class="tab-content mt-2 mb-3" id="pills-with-icon-tabContent">
 						<div class="tab-pane fade" id="pills-home-icon" role="tabpanel" aria-labelledby="pills-home-tab-icon">
@@ -98,6 +104,15 @@
 										</a>
 									</li>
 								</ul>
+							</p>
+						</div>
+						<div class="tab-pane fade" id="pills-info-icon" role="tabpanel" aria-labelledby="pills-info-tab-icon">
+							<p>
+							<hr>
+							<a class="btn btn-primary btn-block text-left" href="javascript:halaman('info');">
+								<i class="fas fa-chevron-circle-right"></i>
+								<span class="sub-item">Informasi</span>
+							</a>
 							</p>
 						</div>
 						<div class="tab-pane fade" id="pills-contact-icon" role="tabpanel" aria-labelledby="pills-contact-tab-icon">
