--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -115,12 +115,12 @@
 							</a>
 							</p>
 						</div>
-						<div class="tab-pane fade" id="pills-contact-icon" role="tabpanel" aria-labelledby="pills-contact-tab-icon">
+						<!-- <div class="tab-pane fade" id="pills-contact-icon" role="tabpanel" aria-labelledby="pills-contact-tab-icon">
 							<p>
 							<hr>
 							Aplikasi OSN berbasis website
 							</p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
