--- a/peserta/index.html
+++ b/peserta/index.html
@@ -234,7 +234,7 @@
 							</div>
 						</li> -->
 						<li class="nav-item active mt-3">
-							<a href="logout.php" class="collapsed">
+							<a href="./logout" class="collapsed">
 								<i class="fas fa-arrow-alt-circle-left"></i>
 								<p>Logout</p>
 							</a>							
