--- a/peserta/index.html
+++ b/peserta/index.html
@@ -206,13 +206,13 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a href="javascript:halaman('info');">
+							<a href="javascript:halaman('info')">
 								<i class="fas fa-info-circle"></i>
 								<p>Informasi</p>
 							</a>
 						
 						</li>
-							<!-- <li class="nav-item">
+						<!-- <li class="nav-item">
 							<a data-toggle="collapse" href="#rekapAbsen">
 								<i class="fas fa-clipboard-list"></i>
 								<p>Rekap Absen</p>
@@ -226,7 +226,7 @@
 									foreach ($mengajar as $dm) { ?>
 									<li>
 										<a href="?page=rekap&pelajaran=<?=$dm['id_mengajar'] ?> ">
-											<span class="sub-item"><!-- <?=strtoupper($dm['mapel']); ?> -->KELAS (<?=strtoupper($dm['nama_kelas']); ?>)</span>
+											<span class="sub-item"><?=strtoupper($dm['mapel']); ?>KELAS (<?=strtoupper($dm['nama_kelas']); ?>)</span>
 										</a>
 									</li>
 								<?php } ?>
