--- a/peserta/index.html
+++ b/peserta/index.html
@@ -415,7 +415,7 @@
 		var links = document.querySelectorAll('.sidebar-content .nav li');
 		links.forEach(function(element) {
 			element.addEventListener('click', function(e) {
-				e.preventDefault();
+				//e.preventDefault();
 				links.forEach(function(element) {
 					element.classList.remove('active');
 				});
