--- a/peserta/index.html
+++ b/peserta/index.html
@@ -165,7 +165,7 @@
 						</div>
 					</div>
 					<ul class="nav nav-primary">
-						<li class="nav-item active">
+						<li class="nav-item dasbor active">
 							<a href="" class="collapsed">
 								<i class="fas fa-home"></i>
 								<p>Dashboard</p>
@@ -390,6 +390,7 @@
 	<script src="../assets/js/setting-demo.js"></script> -->
 	
 	<script type="text/javascript">
+		var links = document.querySelectorAll('.sidebar-content .nav li');
 		/*$(document).ready(function() {
 			$('.halaman').load('./modul/home.html');
 		});*/
@@ -398,6 +399,12 @@
 			$('.halaman').load('./modul/'+ file +'.html', function() {
 				$('.halaman').append($('.tagsJS').html());
 			});
+			if(file === 'home') {
+				links.forEach(function(element) {
+					element.classList.remove('active');
+				});
+			   	$('.dasbor').addClass('active');
+			}
 			console.log(file);
 		}
 		halaman('home');
@@ -412,7 +419,7 @@
 			//$('.toggle-sidebar').click();
 		    }
 		};
-		var links = document.querySelectorAll('.sidebar-content .nav li');
+		
 		links.forEach(function(element) {
 			element.addEventListener('click', function(e) {
 				//e.preventDefault();
