--- a/peserta/index.html
+++ b/peserta/index.html
@@ -276,8 +276,8 @@
 						Anda telah masuk sebagai ASTRONOMI &ndash; <script>document.write(Cookies.get('user'))</script>, konfirmasi jika Anda ingin keluar situs.
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-success" data-dismiss="modal" style="font-size: 17px;font-weight: 600;"><b>Tutup</b></button>
-						<button type="button" class="btn btn-danger logout" style="font-size: 17px;font-weight: 600;"><b>Keluar</b></button>
+						<button type="button" class="btn success" data-dismiss="modal" style="font-size: 17px;font-weight: 600;"><b>Tutup</b></button>
+						<button type="button" class="btn danger logout" style="font-size: 17px;font-weight: 600;"><b>Keluar</b></button>
 					</div>
 				</div>
 			</div>
@@ -352,6 +352,16 @@
 	</div>
 	
 	<style>
+		.danger {
+			color: #fff;
+			background-color: #dc3545;
+			border-color: #dc3545;
+		}
+		.success {
+			color: #fff;
+			background-color: #28a745;
+			border-color: #28a745;
+		}
 		/*.nav-link.active.show {
 			background: #1572e8;
 		}*/
