--- a/peserta/index.html
+++ b/peserta/index.html
@@ -479,7 +479,7 @@
 							localStorage.removeItem('sessionLogin');
 						}
 						else {
-							window.location.replace('user');
+							window.location.replace('../user');
 						}				
 					}, 1000);
 			}
