--- a/peserta/index.html
+++ b/peserta/index.html
@@ -475,8 +475,10 @@
 			else {
 				setInterval(function() {
 						var remaining = localStorage.sessionLogin - new Date;
-						if( remaining >= 0 ) {
-							localStorage.removeItem('sessionLogin');
+						if( remaining > 0 ) {
+							setTimeout(function() {
+								localStorage.removeItem('sessionLogin'); 
+							}, 1000);
 						}
 						else {
 							window.location.replace('../user');
