--- a/peserta/index.html
+++ b/peserta/index.html
@@ -476,9 +476,10 @@
 				setInterval(function() {
 						var remaining = localStorage.sessionLogin - new Date;
 						if( remaining > 0 ) {
-							setTimeout(function() {
+							localStorage.sessionLogin = +new Date + intervalSesi;
+							/*setTimeout(function() {
 								localStorage.removeItem('sessionLogin'); 
-							}, 1000);
+							}, 1000);*/
 						}
 						else {
 							window.location.replace('../user');
