--- a/peserta/index.html
+++ b/peserta/index.html
@@ -466,7 +466,7 @@
 			window.location.replace('https://r26ast.github.io/dasbor/');
 		});
 
-		document.addEventListener("visibilitychange", () => {
+		/* document.addEventListener("visibilitychange", () => {
 			var intervalSesi = 1 * 60 * 1000;
 			var out = 0;
 			if (document.hidden) {
@@ -488,7 +488,7 @@
 						}				
 					}, 1000);
 			}
-		});	
+		});	*/
 	</script>
 	
 
