--- a/peserta/index.html
+++ b/peserta/index.html
@@ -114,7 +114,7 @@
 										<div class="user-box">
 											<div class="avatar-lg"><img src="../assets/img/user.jpg" alt="image profile" class="avatar-img rounded"></div>
 											<div class="u-text">
-												<h4>PUTRAKU RULIFF ABBAS</h4>
+												<h4><script></script>document.write(Cookies.get('user').toUpperCase())</script></h4>
 												<p class="text-muted">OSN ASTRONOMI</p>
 												<a href="?page=jadwal" class="btn btn-xs btn-secondary btn-sm">Jadwal Mengajar</a>
 											</div>
