--- a/peserta/index.html
+++ b/peserta/index.html
@@ -114,7 +114,7 @@
 										<div class="user-box">
 											<div class="avatar-lg"><img src="../assets/img/user.jpg" alt="image profile" class="avatar-img rounded"></div>
 											<div class="u-text">
-												<h4><script></script>document.write(Cookies.get('user').toUpperCase())</script></h4>
+												<h4><script>document.write(Cookies.get('user').toUpperCase())</script></h4>
 												<p class="text-muted">OSN ASTRONOMI</p>
 												<a href="?page=jadwal" class="btn btn-xs btn-secondary btn-sm">Jadwal Mengajar</a>
 											</div>
@@ -146,7 +146,7 @@
 						<div class="info">
 							<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 								<span>
-								PUTRAKU RULIFF ABBAS
+								<script>document.write(Cookies.get('user').toUpperCase())</script>
 									<span class="user-level">OSN ASTRONOMI</span>
 									<span class="caret"></span>
 								</span>
