--- a/peserta/index.html
+++ b/peserta/index.html
@@ -425,12 +425,12 @@
 		}
 		else {}
 
-		$(document).hide();
+		$('body').hide();
 		
 		//var links = document.querySelectorAll('.sidebar-content .nav li');
 		
 		$(document).ready(function() {
-			$(document).show();
+			$('body').show();
 		});
 	
 		function halaman(file) {
