--- a/peserta/index.html
+++ b/peserta/index.html
@@ -480,7 +480,10 @@
 		
 		$('.logout').click(function() {
 			//console.log('keluar');
-			Cookies.remove('user');
+			Cookies.remove('user', {
+				path    : '/dasbor/', 
+				domain  : 'r26ast.github.io'
+			});
 			window.location.replace('https://r26ast.github.io/dasbor/');
 		});
 
