--- a/peserta/index.html
+++ b/peserta/index.html
@@ -487,7 +487,7 @@
 			window.location.replace('https://r26ast.github.io/dasbor/');
 		});
 
-		/* document.addEventListener("visibilitychange", () => {
+		 document.addEventListener("visibilitychange", () => {
 			var intervalSesi = 1 * 60 * 1000;
 			var out = 0;
 			if (document.hidden) {
@@ -498,10 +498,11 @@
 						var remaining = localStorage.sessionLogin - new Date;
 						if ( remaining > 0 ) {
 							//localStorage.sessionLogin = +new Date + intervalSesi;
-							localStorage.removeItem('sessionLogin'); 
+							//localStorage.removeItem('sessionLogin'); 
+   							out = 1;
 							setTimeout(function() {
-								//localStorage.removeItem('sessionLogin'); 
-								out = 1;
+								localStorage.removeItem('sessionLogin'); 
+								//out = 1;
 							}, 1000);
 						}
 						else if ( remaining <= 0 && out == 1 )  {
@@ -509,7 +510,7 @@
 						}				
 					}, 1000);
 			}
-		});	*/
+		});	
 	</script>
 	
 
