--- a/peserta/index.html
+++ b/peserta/index.html
@@ -494,22 +494,16 @@
 				localStorage.sessionLogin = +new Date + intervalSesi;
 				setInterval(function() {
 						var remaining = localStorage.sessionLogin - new Date();
-						if ( remaining > 0 ) {
-							//localStorage.sessionLogin = +new Date + intervalSesi;
-							//localStorage.removeItem('sessionLogin'); 
-   							out = 1;
-							setTimeout(function() {
-								localStorage.removeItem('sessionLogin'); 
-								//out = 1;
-							}, 1000);
-						}
-						else if ( remaining <= 0 && out == 1 )  {
+						if ( remaining <= 0 ) {
 							window.location.replace('../user');
+						}
+						else {
+							localStorage.removeItem('sessionLogin'); 
 						}				
 					}, 1000);
 			} 
 			else {
-				setInterval(function() {
+				/*setInterval(function() {
 						var remaining = localStorage.sessionLogin - new Date();
 						if ( remaining > 0 ) {
 							//localStorage.sessionLogin = +new Date + intervalSesi;
@@ -523,7 +517,7 @@
 						else if ( remaining <= 0 && out == 1 )  {
 							window.location.replace('../user');
 						}				
-					}, 1000);
+					}, 1000);*/
 			}
 		});	
 	</script>
