--- a/peserta/index.html
+++ b/peserta/index.html
@@ -487,7 +487,7 @@
 			window.location.replace('https://r26ast.github.io/dasbor/');
 		});
 
-		 document.addEventListener("visibilitychange", () => {
+		 /* document.addEventListener("visibilitychange", () => {
 			var intervalSesi = 1 * 60 * 1000;
 			var out = 0;
 			if (document.hidden) {
@@ -498,28 +498,29 @@
 							window.location.replace('../user');
 						}
 						else {
-							localStorage.removeItem('sessionLogin'); 
+							//localStorage.removeItem('sessionLogin');
+							localStorage.sessionLogin = +new Date + intervalSesi;
 						}				
 					}, 1000);
 			} 
 			else {
-				/*setInterval(function() {
+				setInterval(function() {
 						var remaining = localStorage.sessionLogin - new Date();
 						if ( remaining > 0 ) {
-							//localStorage.sessionLogin = +new Date + intervalSesi;
+							localStorage.sessionLogin = +new Date + intervalSesi;
 							//localStorage.removeItem('sessionLogin'); 
-   							out = 1;
-							setTimeout(function() {
+   							//out = 1;
+							/*setTimeout(function() {
 								localStorage.removeItem('sessionLogin'); 
 								//out = 1;
-							}, 1000);
+							}, 1000); */
 						}
-						else if ( remaining <= 0 && out == 1 )  {
+						else if ( remaining <= 0 )  {
 							window.location.replace('../user');
 						}				
-					}, 1000);*/
+					}, 1000);
 			}
-		});	
+		});	*/
 	</script>
 	
 
