--- a/peserta/index.html
+++ b/peserta/index.html
@@ -39,8 +39,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 
 </head>
-<body>
-	<div class="wrapper" style="display: none">
+<body style="display: none;">
+	<div class="wrapper">
 		<div class="main-header">
 			<!-- Logo Header -->
 			<div class="logo-header" data-background-color="blue">
@@ -440,7 +440,8 @@
 		//var links = document.querySelectorAll('.sidebar-content .nav li');
 		
 		$(document).ready(function() {
-			$('.wrapper').show();
+			//$('.wrapper').show();
+			$('body').show();
 		});
 	
 		function halaman(file) {
