--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -29,7 +29,7 @@
 						<li class="contentnode"><dl><dt>Jenis Kelamin</dt><dd>L</dd></dl></li>-->
 						<li class="contentnode"><dl><dt>Nomor Pokok Sekolah Nasional/Kode Perguruan Tinggi</dt><dd>20322740</dd></dl></li>
 						<li class="contentnode"><dl><dt>Sekolah/Universitas</dt><dd>SMA NEGERI 2 BATANG</dd></dl></li>
-						<li class="contentnode"><dl><dt>Username</dt><dd class="user"></dd></dl></li>
+						<li class="contentnode"><dl><dt>Username</dt><dd class="username"></dd></dl></li>
 						<li class="contentnode"><dl><dt>Kurikulum</dt><dd>Kurikulum Merdeka</dd></dl></li>
 						<li class="contentnode"><dl><dt>Kabupaten/Kota</dt><dd>Kab. Batang</dd></dl></li>
 						<li class="contentnode"><dl><dt>Provinsi</dt><dd>Jawa Tengah</dd></dl></li>
