--- a/peserta/index.html
+++ b/peserta/index.html
@@ -431,7 +431,7 @@
 	
 	<script type="text/javascript">
 		if(typeof Cookies.get('user') === "undefined") {
-			window.location.replace('https://r26ast.github.io/dasbor/');
+			window.location.replace('https://r26ast.github.io/dasbor/login');
 		}
 		else {}
 
