--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css" />
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
+	  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
 
 
@@ -138,6 +139,7 @@
     <script src="./assets/js/main.js"></script>
     <!--<script src="./assets/js/notif.js"></script>-->
 	<script src="./assets/js/app.js"></script>
+	<script src="../assets/js/core/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$('#loader').modal('show');
 		$(document).ready(function() {
