--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
     <script src="./assets/js/main.js"></script>
     <!--<script src="./assets/js/notif.js"></script>-->
 	<script src="./assets/js/app.js"></script>
-	<script src="../assets/js/core/bootstrap.min.js"></script>
+	<script src="./assets/js/core/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$('#loader').modal('show');
 		$(document).ready(function() {
