--- a/login.html
+++ b/login.html
@@ -130,7 +130,7 @@
 	  
     </section>
 
-	  <div class="modal fade" id="loader" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="loader" aria-hidden="true">
+	  <div class="modal fade" id="loader" tabindex="-1">
 		<!-- <div class="modal-dialog" role="document">
 		</div> -->
 	</div>
