--- a/login.html
+++ b/login.html
@@ -130,10 +130,14 @@
 	  
     </section>
 
-	  <div class="modal fade" id="loader" tabindex="-1">
+	<!-- <div class="modal fade" id="loader" tabindex="-1">
 		<!-- <div class="modal-dialog" role="document">
-		</div> -->
+		</div> --
+	</div> -->
+	<div style="position:absolute;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:none" id="loader">
+		<img class="loader" src="./assets/img/loader.gif">
 	</div>
+
 
     <!--=============== JS ===============-->
     <script src="./assets/js/main.js"></script>
@@ -141,9 +145,11 @@
 	<script src="./assets/js/app.js"></script>
 	<script src="./assets/js/core/bootstrap.min.js"></script>
 	<script type="text/javascript">
-		$('#loader').modal('show');
+		//$('#loader').modal('show');
+		$('#loader').show();
 		$(document).ready(function() {
-			$('#loader').modal('hide');
+			//$('#loader').modal('hide');
+			$('#loader').hide();
 		});
 	</script>
   </body>
