--- a/login.html
+++ b/login.html
@@ -133,7 +133,8 @@
 	<div class="modal fade" id="loader" tabindex="-1">
 		<!-- <div class="modal-dialog" role="document">
 		</div> -->
-		  <img class="loader" src="./assets/img/loader.gif">
+		<!-- <img class="loader" src="./assets/img/loader.gif"> -->
+		<div class="tenor-gif-embed" data-postid="18145778" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/disney-disney-plus-plus-loading-loop-gif-18145778">Disney Disney Plus GIF</a>from <a href="https://tenor.com/search/disney-gifs">Disney GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 	</div> 
 	<!-- <div style="position:absolute;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:none" id="loader">
 		<img class="loader" src="./assets/img/loader.gif">
