--- a/login.html
+++ b/login.html
@@ -134,7 +134,7 @@
 		<!-- <div class="modal-dialog" role="document">
 		</div> -->
 		<!-- <img class="loader" src="./assets/img/loader.gif"> -->
-		<div class="tenor-gif-embed" data-postid="18145778" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/disney-disney-plus-plus-loading-loop-gif-18145778">Disney Disney Plus GIF</a>from <a href="https://tenor.com/search/disney-gifs">Disney GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+		<div style="padding-top:89.031%;position:relative;"><iframe src="https://gifer.com/embed/VZvw" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com">via GIFER</a></p>
 	</div> 
 	<!-- <div style="position:absolute;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:none" id="loader">
 		<img class="loader" src="./assets/img/loader.gif">
