--- a/login.html
+++ b/login.html
@@ -133,8 +133,7 @@
 	<div class="modal fade" id="loader" tabindex="-1">
 		<!-- <div class="modal-dialog" role="document">
 		</div> -->
-		<!-- <img class="loader" src="./assets/img/loader.gif"> -->
-		<div style="padding-top:89.031%;position:relative;"><iframe src="https://gifer.com/embed/VZvw" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com">via GIFER</a></p>
+		<img class="loader" src="./assets/img/loader1.gif"> 
 	</div> 
 	<!-- <div style="position:absolute;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:none" id="loader">
 		<img class="loader" src="./assets/img/loader.gif">
