--- a/login.html
+++ b/login.html
@@ -133,7 +133,7 @@
 	<div class="modal fade" id="loader" tabindex="-1">
 		<!-- <div class="modal-dialog" role="document">
 		</div> -->
-		<img class="loader" src="./assets/img/loader1.gif"> 
+		<img class="loader" src="./assets/img/loader.gif"> 
 	</div> 
 	<!-- <div style="position:absolute;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:none" id="loader">
 		<img class="loader" src="./assets/img/loader.gif">
