--- a/login.html
+++ b/login.html
@@ -130,7 +130,9 @@
 	  
     </section>
 
-	<img class="loader" src="./assets/img/loader.gif"> 
+	<div style="position:fixed;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:grid; place-items: center; grid-template-areas: 'inner'" id="loader">
+		<img class="loader" src="./assets/img/loader.gif"> 
+	</div>
 
     <!--=============== JS ===============-->
     <script src="./assets/js/main.js"></script>
@@ -146,6 +148,5 @@
 			//$('#loader').hide();
 		});
 	</script>
-	<div style="position:fixed;top:0px;left:0px;right:0px;bottom:0px;background:#000;opacity:0.5;z-index:99999;display:block" id="loader"></div> 
   </body>
 </html>
