--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
 						<div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
 							<div class="box">
 								<h3>Form Login</h3>
-								<a href="./login">
 									<img src="./assets/img/osn.png" class="img-fluid" alt="">
 									<br />
 									<br />
-									<button class="btn block full-width m-b" style="background: #4154f1; color: #fff; font-family: 'Nunito', sans-serif; font-size: 16px;font-weight: 800">Login Dasbor</button>
-								</a>
+									<a href="./login" class="btn block full-width m-b" style="background: #4154f1; color: #fff; font-family: 'Nunito', sans-serif; font-size: 16px;font-weight: 800">Login Dasbor</a>
 							</div>
 						</div>
 					</center>
