--- a/guru/index.html
+++ b/guru/index.html
@@ -209,11 +209,16 @@
 							</div>
 						</li>
 						<li class="nav-item">
+							<a href="javascript:halaman('nilai')">
+								<i class="fas fa-clipboard-list"></i>
+								<p>Rekap Nilai</p>
+							</a>
+						</li>
+						<li class="nav-item">
 							<a href="javascript:halaman('info')">
 								<i class="fas fa-info-circle"></i>
 								<p>Informasi</p>
 							</a>
-						
 						</li>
 						<!-- <li class="nav-item">
 							<a data-toggle="collapse" href="#rekapAbsen">
