--- a/guru/index.html
+++ b/guru/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Peserta | Aplikasi OSN</title>
+	<title>Pembimbing | Aplikasi OSN</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href="../assets/img/icon.ico" type="image/x-icon"/>
 
