--- a/guru/index.html
+++ b/guru/index.html
@@ -116,7 +116,7 @@
 											<div class="u-text">
 												<h4><script>document.write(Cookies.get('user').toUpperCase())</script></h4>
 												<p class="text-muted">OSN ASTRONOMI</p>
-												<a href="?page=jadwal" class="btn btn-xs btn-secondary btn-sm">Jadwal Mengajar</a>
+												<!-- <a href="?page=jadwal" class="btn btn-xs btn-secondary btn-sm">Jadwal Mengajar</a> -->
 											</div>
 										</div>
 									</li>
