--- a/guru/modul/home.html
+++ b/guru/modul/home.html
@@ -46,8 +46,8 @@
 					<ul class="nav nav-pills nav-primary  nav-pills-no-bd nav-pills-icons justify-content-center" id="pills-tab-with-icon" role="tablist">
 						<li class="nav-item">
 							<a class="nav-link" id="pills-home-tab-icon" data-toggle="pill" href="#pills-home-icon" role="tab" aria-controls="pills-home-icon" aria-selected="true">
-								<i class="fas fa-clipboard-check"></i>
-									Ujian
+								<i class="fas fa-clipboard-list"></i>
+									Nilai
 							</a>
 						</li>
 						<li class="nav-item">
@@ -70,7 +70,7 @@
 						</li> -->
 					</ul>
 					<div class="tab-content mt-2 mb-3" id="pills-with-icon-tabContent">
-						<div class="tab-pane fade" id="pills-home-icon" role="tabpanel" aria-labelledby="pills-home-tab-icon">
+						<!-- <div class="tab-pane fade" id="pills-home-icon" role="tabpanel" aria-labelledby="pills-home-tab-icon">
 							<p>
 								<ul class="list-group">
 									<li class="list-group-item">
@@ -83,6 +83,24 @@
 										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('osnk');">
 											<i class="fas fa-chevron-circle-right"></i>
 											<span class="sub-item">OSN-K ASTRONOMI</span>
+										</a>
+									</li>
+								</ul>
+							</p>
+						</div> -->
+						<div class="tab-pane fade" id="pills-home-icon" role="tabpanel" aria-labelledby="pills-home-tab-icon">
+							<p>
+								<ul class="list-group">
+									<li class="list-group-item">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('nilai_to_osnk');">
+											<i class="fas fa-chevron-circle-right"></i>
+											<span class="sub-item">Nilai TO OSN-K ASTRONOMI</span>
+										</a>
+									</li>
+									<li class="list-group-item">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('nilai_osnk');">
+											<i class="fas fa-chevron-circle-right"></i>
+											<span class="sub-item">Nilai OSN-K ASTRONOMI</span>
 										</a>
 									</li>
 								</ul>
