--- a/guru/modul/nilai.html
+++ b/guru/modul/nilai.html
@@ -10,7 +10,7 @@
 				<i class="flaticon-right-arrow"></i>
 			</li>
 			<li class="nav-item">
-				<a href="#">Ujian</a>
+				<a href="#">Rekap Nilai</a>
 			</li>
 		</ul>
 	</div>
@@ -18,7 +18,7 @@
 		<div class="col-md-6"> <!-- data -->
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">TO OSN ASTRONOMI</h4>
+					<h4 class="card-title">Nilai TO OSN ASTRONOMI</h4>
 				</div>
 				<div class="card-body">
 					<form action="" method="post">
@@ -28,7 +28,7 @@
 							</span>
 						</p>
 						<center>
-							<a href="javascript:halaman('to_osnk')" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
+							<a href="javascript:halaman('nilai_to_osnk')" class="btn btn-info"><i class="fa fa-list-ol"></i> Buka</a>
 						</center>
 					</form>
 				</div>
@@ -47,7 +47,7 @@
 							</span>
 						</p>
 						<center>
-							<a href="javascript:halaman('osnk')" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
+							<a href="javascript:halaman('nilai_osnk')" class="btn btn-info"><i class="fa fa-list-ol"></i> Buka</a>
 						</center>
 					</form>
 				</div>
