--- a/guru/modul/nilai.html
+++ b/guru/modul/nilai.html
@@ -37,7 +37,7 @@
 		<div class="col-md-6">
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">OSN ASTRONOMI</h4>
+					<h4 class="card-title">Nilai OSN ASTRONOMI</h4>
 				</div>
 				<div class="card-body">
 					<form action="" method="post">
