--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -29,10 +29,9 @@
 				<div class="card-body">
 					<table class="table">
 				  		<thead>
-							<tr class="bg-primary">
+							<tr class="bg-primary" style="color: #fff">
 								<th scope="col">Username Peserta</th>
-								<th scope="col">Nama Peserta</th>
-								<th scope="col">Nilai TO OSK</th>				  
+								<th scope="col">Nama Peserta</th>			  
 								<th scope="col">Nilai OSK</th>
 							</tr>
 						</thead>
@@ -41,36 +40,41 @@
 								<td>
 									<p>AST001</p>
 								</td>
-								<td><span id="nilai_TO_OSK_1"></span> / 40</td>	
-								<td><span id="nilai_OSK_1"></span> / 40</td>	
+								<td></td>
+								<td><span id="nilai_skor_OSK_1"></span> / 40</td>	
+								<td><span id="nilai_OSK_1"></span> / 100</td>	
 							</tr>
 							 <tr>
 								<td>
 									<p>AST002</p>
 								</td>
-								<td><span id="nilai_TO_OSK_2"></span> / 40</td>	
-								<td><span id="nilai_OSK_2"></span> / 40</td>	
+								<td></td>
+								<td><span id="nilai_skor_OSK_2"></span> / 40</td>	
+								<td><span id="nilai_OSK_2"></span> / 100</td>	
 							</tr>
 							 <tr>
 								<td>
 									<p>AST003</p>
 								</td>
-								<td><span id="nilai_TO_OSK_3"></span> / 40</td>	
-								<td><span id="nilai_OSK_3"></span> / 40</td>	
+								<td></td>
+								<td><span id="nilai_skor_OSK_3"></span> / 40</td>	
+								<td><span id="nilai_OSK_3"></span> / 100</td>	
 							</tr>
 							 <tr>
 								<td>
 									<p>AST004</p>
 								</td>
-								<td><span id="nilai_TO_OSK_4"></span> / 40</td>	
-								<td><span id="nilai_OSK_4"></span> / 40</td>	
+								<td></td>
+								<td><span id="nilai_skor_OSK_4"></span> / 40</td>	
+								<td><span id="nilai_OSK_4"></span> / 100</td>	
 							</tr>
 							 <tr>
 								<td>
 									<p>AST005</p>
 								</td>
-								<td><span id="nilai_TO_OSK_5"></span> / 40</td>	
-								<td><span id="nilai_OSK_5"></span> / 40</td>	
+								<td></td>
+								<td><span id="nilai_skor_OSK_5"></span> / 40</td>	
+								<td><span id="nilai_OSK_5"></span> / 100</td>	
 							</tr>
 						</tbody>
 					</table>
