--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -31,7 +31,8 @@
 				  		<thead>
 							<tr class="bg-primary" style="color: #fff">
 								<th scope="col">Username Peserta</th>
-								<th scope="col">Nama Peserta</th>			  
+								<th scope="col">Nama Peserta</th>
+								<th scope="col">Skor OSK</th>
 								<th scope="col">Nilai OSK</th>
 							</tr>
 						</thead>
