--- a/guru/index.html
+++ b/guru/index.html
@@ -86,7 +86,7 @@
 							</a>
 						</li> -->
 						
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<div class="btn-group">
 								<button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									<span class="fi fi-id"></span>&nbsp;Indonesia
@@ -100,7 +100,7 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="./jp" style="font-size: 14px;"><span class="fi fi-jp"></span> &nbsp;日本語</a>
 							</div> 
-						</li>
+						</li> -->
 						
 						<li class="nav-item dropdown hidden-caret">
 							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
