--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -3,7 +3,7 @@
 		<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
 			<div>
 				<h2 class="text-white pb-2 fw-bold">Aplikasi OSN</h2>
-				<h5 class="text-white op-7 mb-2">Selamat Datang, <b class="usename text-warning"></b></h5>
+				<h5 class="text-white op-7 mb-2">Selamat Datang, <b class="username text-warning"></b></h5>
 			</div>
 			<div class="ml-md-auto py-2 py-md-0 text-white">
 				<p><i class="fa fa-calendar fa-lg"></i>
