--- a/guru/modul/profil.html
+++ b/guru/modul/profil.html
@@ -18,7 +18,7 @@
 		<div class="col-md-6"> <!-- data -->
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">Detail Peserta</h4>
+					<h4 class="card-title">Detail Akun</h4>
 				</div>
 				<div class="card-body">
 					<ul style="padding-left: 0px;">
