--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -30,16 +30,16 @@
 					<table class="table">
 				  		<thead>
 							<tr class="bg-primary" style="color: #fff">
-								<th scope="col">Username Peserta</th>
-								<th scope="col">Nama Peserta</th>
-								<th scope="col">Skor OSK</th>
-								<th scope="col">Nilai OSK</th>
+								<th scope="col"><b></b>Username Peserta</b></th>
+								<th scope="col"><b>Nama Peserta</b>b></th>
+								<th scope="col"><b>Skor OSK</b>b></th>
+								<th scope="col"><b>Nilai OSK</b>b></th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td>
-									<p>AST001</p>
+									<p><b>AST001</b>b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_1"></span> / 40</td>	
@@ -47,7 +47,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p>AST002</p>
+									<p><b>AST002</b>b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_2"></span> / 40</td>	
@@ -55,7 +55,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p>AST003</p>
+									<p><b>AST003</b>b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_3"></span> / 40</td>	
@@ -63,7 +63,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p>AST004</p>
+									<p><b>AST004</b>b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_4"></span> / 40</td>	
@@ -71,7 +71,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p>AST005</p>
+									<p><b>AST005</b>b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_5"></span> / 40</td>	
