--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -31,15 +31,15 @@
 				  		<thead>
 							<tr class="bg-primary" style="color: #fff">
 								<th scope="col"><b></b>Username Peserta</b></th>
-								<th scope="col"><b>Nama Peserta</b>b></th>
-								<th scope="col"><b>Skor OSK</b>b></th>
-								<th scope="col"><b>Nilai OSK</b>b></th>
+								<th scope="col"><b>Nama Peserta</b></th>
+								<th scope="col"><b>Skor OSK</b></th>
+								<th scope="col"><b>Nilai OSK</b></th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td>
-									<p><b>AST001</b>b></p>
+									<p><b>AST001</b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_1"></span> / 40</td>	
@@ -47,7 +47,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p><b>AST002</b>b></p>
+									<p><b>AST002</b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_2"></span> / 40</td>	
@@ -55,7 +55,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p><b>AST003</b>b></p>
+									<p><b>AST003</b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_3"></span> / 40</td>	
@@ -63,7 +63,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p><b>AST004</b>b></p>
+									<p><b>AST004</b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_4"></span> / 40</td>	
@@ -71,7 +71,7 @@
 							</tr>
 							 <tr>
 								<td>
-									<p><b>AST005</b>b></p>
+									<p><b>AST005</b></p>
 								</td>
 								<td></td>
 								<td><span id="nilai_skor_OSK_5"></span> / 40</td>	
