--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -26,7 +26,7 @@
 				<div class="card-header">
 					<h4 class="card-title">Nilai OSN-K ASTRONOMI <span class="tahun"></span></h4>
 				</div>
-				<div class="card-body">
+				<div class="card-body tabel">
 					<table class="table">
 				  		<thead>
 							<tr class="bg-primary" style="color: #fff">
