--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -27,7 +27,7 @@
 					<h4 class="card-title">Nilai OSN-K ASTRONOMI <span class="tahun"></span></h4>
 				</div>
 				<div class="card-body">
-					<div class="tabel">
+					<div class="tabel table-responsive">
 					<table class="table">
 				  		<thead>
 							<tr class="bg-primary" style="color: #fff">
