--- a/guru/modul/nilai.html
+++ b/guru/modul/nilai.html
@@ -15,6 +15,25 @@
 		</ul>
 	</div>
 	<div class="row mt--2">
+		<div class="col-md-12"> <!-- data -->
+			<div class="card">
+				<div class="card-header">
+					<h4 class="card-title">EDIT PROFIL PESERTA</h4>
+				</div>
+				<div class="card-body">
+					<form>
+						<p>
+							<span class="badge badge-primary" style="padding: 7px;font-size: 14px;">
+								Bagian untuk mengedit nama dan kelas agar memudahkan dalam penginputan nilai.
+							</span>
+						</p>
+						<center>
+							<a href="javascript:halaman('profil_peserta')" class="btn btn-info"><i class="fa fa-pencil-square-o"></i> Buka</a>
+						</center>
+					</form>
+				</div>
+			</div>
+		</div>
 		<div class="col-md-6"> <!-- data -->
 			<div class="card">
 				<div class="card-header">
